--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ABC Bank</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <div id="login-area">
+        <h1 class="text-center">Welcome to ABC Bank</h1>
+    </div>
+    <div class="submit-area">
+        <h4>Login-area</h4>
+        <input type="text" placeholder="Email" class="form-control">
+        <br>
+        <input type="password" placeholder="Password" class="form-control">
+        <br>
+        <button class="btn btn-success">Submit</button>
+    </div>
+
+    
+    <script>
+
+    </script>
 </body>
 </html>
