--- a/index.html
+++ b/index.html
@@ -107,14 +107,20 @@
 
                document.getElementById("currentDeposit").innerText = totalDeposit;
 
-               const currentBalance = document.getElementById("currentBalance").innerText;
-               const currentBalanceNumber = parseFloat(currentBalance);
-               const totalBalance = depositNumber + currentBalanceNumber;
-               document.getElementById("currentBalance").innerText = totalBalance;
+               updateSpanText("currentBalance", depositNumber);
+
+               
 
                document.getElementById("depositAmount").value ="";
 
            })
+           function updateSpanText(id, depositNumber){
+            const currentBalance = document.getElementById(id).innerText;
+               const currentBalanceNumber = parseFloat(currentBalance);
+               const totalBalance = depositNumber + currentBalanceNumber;
+               document.getElementById(id).innerText = totalBalance;
+
+           }
 
     </script>
 </body>
