--- a/index.html
+++ b/index.html
@@ -99,26 +99,39 @@
            // deposit btn even handler
            const depositBtn = document.getElementById("addDeposit");
            depositBtn.addEventListener("click", function(){
-               const depositAmount = document.getElementById("depositAmount").value;
-               const depositNumber = parseFloat(depositAmount);
-               const currentDeposit = document.getElementById("currentDeposit").innerText;
-               const currentDepositNumber = parseFloat(currentDeposit);
-               const totalDeposit = depositNumber + currentDepositNumber;
+            //    const depositAmount = document.getElementById("depositAmount").value;
+            //    const depositNumber = parseFloat(depositAmount);
+            const depositNumber = getInputNumber("depositAmount");
 
-               document.getElementById("currentDeposit").innerText = totalDeposit;
-
+              updateSpanText("currentDeposit", depositNumber);
                updateSpanText("currentBalance", depositNumber);
-
                
 
                document.getElementById("depositAmount").value ="";
-
+            
            })
+
+        //    withdraw Btn Handler
+         const withdrawBtn = document.getElementById("addWithdraw");
+         withdrawBtn.addEventListener("click", function(){
+        //    const withdrawAmount = document.getElementById("withdrawAmount").value;
+        //    const withdrawNumber = parseFloat(withdrawAmount);
+
+        const withdrawNumber = getInputNumber("withdrawAmount");
+        console.log(withdrawNumber);
+         })
+
+         function getInputNumber(id){
+            const amount = document.getElementById(id).value;
+           const amountNumber = parseFloat(amount);
+           return amountNumber;
+         }
+
            function updateSpanText(id, depositNumber){
-            const currentBalance = document.getElementById(id).innerText;
-               const currentBalanceNumber = parseFloat(currentBalance);
-               const totalBalance = depositNumber + currentBalanceNumber;
-               document.getElementById(id).innerText = totalBalance;
+            const current = document.getElementById(id).innerText;
+            const currentNumber = parseFloat(current);
+            const totalAmount = depositNumber + currentNumber;
+               document.getElementById(id).innerText = totalAmount;
 
            }
 
